--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -104,15 +104,15 @@
   }
 
   .h-screen {
-    min-height: 100svh;
+    min-height: 100dvh;
   }
 
   .h-half-screen {
-    min-height: 66svh;
+    min-height: 66dvh;
   }
 
   .h-quarter-screen {
-    min-height: 32svh;
+    min-height: 32dvh;
   }
 
   .mask-to-top {
