--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,7 +94,7 @@ $ms-material-light: (
   )
 ) {
   #__next {
-    min-height: 100svh;
+    min-height: 100dvh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
