--- a/scss/page/_error.scss
+++ b/scss/page/_error.scss
@@ -1,6 +1,8 @@
+@use '@matteusan/himig';
+
 @mixin render() {
-  .page-error {
-    width: calc(100% - 40px);
-    max-width: 420px;
+  .fill-gradient {
+    background: himig.key-create('footer-fill', #{radial-gradient(circle at 50% 100%, rgb(from himig.token-get('surface-400') r g b / 50%) 0%, transparent 100%)});
+    border: 1px solid rgb(from himig.token-get('surface-400') r g b / 50%);
   }
 }
