--- a/scss/components/_ms-header.scss
+++ b/scss/components/_ms-header.scss
@@ -36,7 +36,7 @@ $header-style: 'default' !default;
     color: himig.key-create('header-ink', $header-ink);
     mix-blend-mode: difference;
     z-index: 100;
-    @include himig.prefix(transition, all 0.5s ease);
+    transition: all himig.token-get('time-short') himig.token-get('easing');
 
     @include himig.breakpoint-create('medium') {
       @include himig.key-bind('header-alignment', flex-start);
