--- a/scss/main.scss
+++ b/scss/main.scss
@@ -282,12 +282,14 @@ $ms-material-light: (
 
   #works .ms-card {
     .ms-card__media {
+      filter: none !important;
+
       &:hover {
         filter: none !important;
       }
     }
 
-    @include himig.breakpoint-create('medium') {
+    @include himig.breakpoint-create('large') {
       &:hover {
         --ms-card-radius: #{himig.primitive-token-get('radius.2xl')};
         transition: border-radius himig.token-get('time-short') himig.token-get('easing');
